<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="day_label_sun">S</string>
    <string name="day_label_mon">M</string>
    <string name="day_label_tue">T</string>
    <string name="day_label_wed">W</string>
    <string name="day_label_thu">T</string>
    <string name="day_label_fri">F</string>
    <string name="day_label_sat">S</string>
    <string name="alarms_browser_feature">Alarms browser</string>
    <string name="label_alarm_today">Today</string>
    <string name="label_alarm_tomorrow">Tomorrow</string>
    <string name="alarm_date_format">EEE, dd MMM</string>
    <string name="label_alarm_not_active">Not scheduled</string>
    <string name="title_action_delete">Delete</string>
    <string name="title_action_edit">Edit</string>
    <string name="title_fragment_alarm_editor">Alarm Editor</string>
    <string name="title_dialog_alarm_time_picker">Select alarm time</string>
    <string name="title_repeat_day_sun">Sun</string>
    <string name="title_repeat_day_mon">Mon</string>
    <string name="title_repeat_day_tue">Tue</string>
    <string name="title_repeat_day_wed">Wed</string>
    <string name="title_repeat_day_thu">Thu</string>
    <string name="title_repeat_day_fri">Fri</string>
    <string name="title_repeat_day_sat">Sat</string>
    <string name="title_label_ringtone">Ringtone</string>
    <string name="title_label_vibration">Vibration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_alarms">Alarm</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>